--- a/package.json
+++ b/package.json
@@ -6,17 +6,18 @@
   "repository": "https://github.com/Fjoggs/flog",
   "author": "fjoggis@gmail.com",
   "license": "MIT",
-    "scripts": {
+  "scripts": {
     "fix": "eslint --fix .",
     "test": "jest",
     "test:watch": "jest --watch"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.24.1",    
     "babel-cli": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
     "eslint": "^4.2.0",
     "eslint-config-prettier": "^2.3.0",
     "eslint-plugin-prettier": "^2.1.2",
+    "jest": "^20.0.4",
     "prettier": "^1.5.2",
     "prettier-eslint": "^6.4.2"
   },
