--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "fix": "eslint --fix .",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "prepublishOnly": "babel.js src --out-dir lib"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
