--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fjogger",
   "version": "1.1.0",
   "description": "Barebones 'log-to-file' package for Javascript",
-  "main": "fjogger.js",
+  "main": "src/fjogger.js",
   "repository": "https://github.com/Fjoggs/fjogger",
   "author": "Vegard Fjogstad <fjoggis@gmail.com>",
   "license": "MIT",
@@ -10,10 +10,11 @@
     "fix": "eslint --fix .",
     "test": "jest",
     "test:watch": "jest --watch",
-    "prepublishOnly": "babel.js src --out-dir lib"
+    "prepublishOnly": "babel src --out-dir lib"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
+    "babel-core": "^6.25.0",
     "babel-preset-es2015": "^6.24.1",
     "eslint": "^4.2.0",
     "eslint-config-prettier": "^2.3.0",
